# libafl_simd_bench

./: Cargo.toml  Readme.md  rust-toolchain.toml
src/: counts.rs  cov.rs  lib.rs  main.rs
