[package]
name = "libafl_simd_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.40"
clap = { version = "4.5.35", features = ["derive"] }
itertools = "0.14.0"
rand = "0.9.0"
wide = {git = "https://github.com/Lokathor/wide", branch = "main"} # for u8x32


[features]
correctness = []